--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   },
   "scripts": {
     "start": "react-scripts start",
