--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "firefly",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
+  "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "framer-motion": "^10.18.0",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
@@ -14,8 +16,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
